gtk4-demo: Stroke offset and jumps in Paint demo
Steps to reproduce
Run gtk4-demo
, start the Paint
application, draw on it with a (Wacom Intuos) stylus.
Current behavior
For most points in the stroke, there's an offset between the cursor position and where the stroke appears. Occasionally, single points jump to the tip of the cursor. This happens more frequently when stylus motion is slow. See the screenshot below. This does not happen in the "Scribble area" of the "Drawing Area" demo. Drawing in gtk3-demo and Xournal++ (and other GTK3 applications) shows no such issues.
Expected outcome
Smooth line always drawn at the tip of the cursor.
Version information
- GTK 4.0.0, Arch, sway
Additional information
Looking at the source of the demo, could it be that some coordinate transform is not quite right when using the event backlog ?
Edited by Benedikt Ames